# Attention2Attention

setfuncbench/: .gitignore  README.md  pyproject.toml
setfuncbench/docs/: dataset1_shared_quadratic.md  dataset2_mixture_curvatures.md  dataset3_hidden_pairing.md  dataset4_pointer_chasing.md  datasets.md
setfuncbench/scripts/: eval.py  generate_data.py  train.py
setfuncbench/src/setfuncbench/: __init__.py  config.py
setfuncbench/src/setfuncbench/data/: registry.py
setfuncbench/src/setfuncbench/data/datasets/: dataset1_shared_quadratic.py  dataset2_mixture_curvatures.py  dataset3_hidden_pairing.py  dataset4_pointer_chasing.py
setfuncbench/src/setfuncbench/data/plots/: __init__.py  plot_dataset1_shared_quadratic.py  plot_dataset2_mixture_curvatures.py  plot_dataset3_hidden_pairing.py  plot_dataset4_pointer_chasing.py
setfuncbench/src/setfuncbench/models/: baseline_a_no_talk.py  baseline_b_global_pool.py  baseline_c_comm_transformer.py  registry.py
setfuncbench/src/setfuncbench/train/: trainer.py
setfuncbench/src/setfuncbench/utils/: device.py  seed.py
setfuncbench/tests/: test_datasets_smoke.py  test_models_smoke.py
